tests/neg/semantic_file_line_bad_arity.baa
// EXPECT: عدد معاملات 'اكتب_سطر' غير صحيح

صحيح الرئيسية() {
    صحيح ر = اكتب_سطر(عدم).
    إرجع ر.
}

